# modelec-marcel-ROS

./: .gitignore  .gitmodules  README.md  TODO.md  build.sh  fastdds_setup.xml  install.sh  installl.sh  ros2_launch_marcel.desktop  ros2_launch_marcel.service  start_ros2.sh  test.start_ros2.sh  usbs.rules
simulated_pcb/: action.py  alim.py  odo.py
src/modelec/: CMakeLists.txt  package.xml
src/modelec/config/: rviz_view.rviz
src/modelec/include/modelec/: arm_controller.hpp  button_gpio_controller.hpp  gamecontroller_listener.hpp  move_controller.hpp  multiple_serial_listener.hpp  odometry_logic_processor.hpp  pca9685_controller.hpp  pcb_alim_interface.hpp  pcb_odo_interface.h  pcb_odo_interface.hpp  solenoid_controller.hpp  speed_result.hpp  tirette_controller.hpp  usb_arduino_listener.hpp  usb_arduino_listener_newlib.hpp  usb_aruido_logic_processor.hpp  utils.hpp
src/modelec/launch/: launch_sim.launch.py  modelec.launch.yml  modelec_gamecontroller.launch.yml  modelec_gamecontroller_remote_server.launch.yml  rsp.launch.py  test.modelec.launch.yml
src/modelec/src/: arm_controller.cpp  button_gpio_controller.cpp  gamecontroller_listener.cpp  lidar_controller.cpp  move_controller.cpp  multiple_serial_listener.cpp  odometry_logic_processor.cpp  pca9685_controller.cpp  pcb_alim_interface.cpp  pcb_odo_interface.cpp  solenoid_controller.cpp  speed_result.cpp  tirette_controller.cpp  usb_arduino_listener.cpp  usb_arduino_listener_newlib.cpp  usb_arduino_logic_processor.cpp
src/modelec_api/: CMakeLists.txt  package.xml
src/modelec_com/: CMakeLists.txt  package.xml
src/modelec_com/include/modelec_com/: multiple_serial_listener.hpp  pca9685_controller.hpp  pcb_action_interface.hpp  pcb_alim_interface.hpp  pcb_odo_interface.hpp
src/modelec_com/src/: multiple_serial_listener.cpp  pca9685_controller.cpp  pcb_action_interface.cpp  pcb_alim_interface.cpp  pcb_odo_interface.cpp
src/modelec_core/: CMakeLists.txt  package.xml
src/modelec_core/include/modelec/: arm_controller.hpp  button_gpio_controller.hpp  gamecontroller_listener.hpp  move_controller.hpp  solenoid_controller.hpp  speed_result.hpp
src/modelec_core/launch/: modelec.launch.py  modelec.launch.yml  modelec_gamecontroller.launch.yml  modelec_gamecontroller_remote_controller.launch.yml  modelec_gamecontroller_remote_server.launch.yml  test.modelec.launch.py  test.modelec.launch.yml  test.no_gui.modelec.launch.yml  test.no_strat.modelec.launch.yml
src/modelec_core/src/: arm_controller.cpp  button_gpio_controller.cpp  gamecontroller_listener.cpp  move_controller.cpp  solenoid_controller.cpp  speed_result.cpp
src/modelec_gui/: CMakeLists.txt  package.xml  resource.qrc
src/modelec_gui/include/modelec_gui/: modelec_gui.hpp
src/modelec_gui/include/modelec_gui/pages/: action_page.hpp  alim_page.hpp  home_page.hpp  map_page.hpp  odo_page.hpp  test_map_page.hpp  test_page.hpp
src/modelec_gui/include/modelec_gui/widget/: action_widget.hpp
src/modelec_gui/src/: main.cpp  modelec_gui.cpp
src/modelec_gui/src/pages/: action_page.cpp  alim_page.cpp  home_page.cpp  map_page.cpp  odo_page.cpp  test_map_page.cpp  test_page.cpp
src/modelec_gui/src/widget/: action_widget.cpp
src/modelec_interface/: CMakeLists.txt  package.xml
src/modelec_interface/msg/: OdometryData.msg  ServoMode.msg  Solenoid.msg
src/modelec_interface/msg/Alim/: AlimEmg.msg
src/modelec_interface/msg/Odometry/: OdometryAddWaypoint.msg  OdometryToF.msg
src/modelec_interface/srv/: AddButton.srv  AddSerialListener.srv  AddSolenoid.srv  Button.srv  NewButton.srv  NewSolenoid.srv
src/modelec_interface/srv/Alim/: AlimIn.srv
src/modelec_interface/srv/Odometry/: OdometryAddWaypoint.srv  OdometryPosition.srv  OdometryToF.srv
src/modelec_interfaces/: CMakeLists.txt  package.xml
src/modelec_interfaces/msg/: PCA9685Servo.msg
src/modelec_interfaces/msg/Action/: ActionAscPos.msg  ActionExec.msg  ActionRelayState.msg  ActionServoPos.msg
src/modelec_interfaces/msg/Map/: Map.msg  Obstacle.msg  Spawn.msg
src/modelec_interfaces/msg/Odometry/: OdometryAddWaypoint.msg  OdometryAddWaypoints.msg  OdometryGoTo.msg  OdometryPos.msg  OdometrySpeed.msg  OdometryToF.msg
src/modelec_interfaces/msg/Strat/: StratState.msg
src/modelec_interfaces/srv/Alim/: AlimBau.srv  AlimOut.srv  AlimTemp.srv
src/modelec_interfaces/srv/Map/: Map.srv  MapSize.srv
src/modelec_interfaces/srv/Odometry/: OdometryAddWaypoint.srv
src/modelec_interfaces/srv/Odometry/PID/: OdometryGetPid.srv  OdometrySetPid.srv
src/modelec_sensors/: CMakeLists.txt  package.xml
src/modelec_sensors/include/modelec_sensors/: lidar_controller.hpp  tirette_controller.hpp
src/modelec_sensors/src/: lidar_controller.cpp  tirette_controller.cpp
src/modelec_strat/: CMakeLists.txt  package.xml
src/modelec_strat/data/: config.xml  deposite_zone.xml  obstacles.xml  pami_zone.xml
src/modelec_strat/include/modelec_strat/: action_executor.hpp  config.hpp  deposite_zone.hpp  enemy_manager.hpp  mission_manager.hpp  navigation_helper.hpp  obstacle.hpp  pami_manager.hpp  pathfinding.hpp  strat_fms.hpp
src/modelec_strat/include/modelec_strat/missions/: banner_mission.hpp  go_home_mission.hpp  mission_base.hpp  prepare_concert_mission.hpp  promotion_mission.hpp
src/modelec_strat/include/modelec_strat/obstacle/: column.hpp  obstacle.hpp
src/modelec_strat/map/: obstacles.xml
src/modelec_strat/src/: action_executor.cpp  config.cpp  deposite_zone.cpp  enemy_manager.cpp  mission_manager.cpp  navigation_helper.cpp  obstacle.cpp  pami_manager.cpp  pathfinding.cpp  strat_fms.cpp
src/modelec_strat/src/missions/: banner_mission.cpp  go_home_mission.cpp  prepare_concert_mission.cpp  promotion_mission.cpp  test.go_home_mission.cpp
src/modelec_strat/src/obstacle/: column.cpp  obstacle.cpp
src/modelec_utils/: CMakeLists.txt  package.xml
src/modelec_utils/include/modelec_utils/: config.hpp  point.hpp  utils.hpp
src/modelec_utils/src/: config.cpp  point.cpp  utils.cpp
